Fix packaging on OS 10.9, emitting a pkg file rather than a dmg now

--- a/inst/Makefile
+++ b/inst/Makefile
@@ -1,6 +1,5 @@
 NAME=Mac9P
 PKG=$(NAME).pkg
-DMG=$(NAME).dmg
 
 PKGROOT=/tmp/$(NAME)
 KEDIR=$(PKGROOT)/System/Library/Extensions/9p.kext
@@ -8,7 +7,7 @@ FSDIR=$(PKGROOT)/System/Library/FileSystems/9p.fs
 NPDIR=$(PKGROOT)/System/Library/FileSystems/NetFSPlugins/9p.bundle
 MNDIR=$(PKGROOT)/usr/local/share/man/man8
 
-PKGRESDIR=$(PKG)/Contents/Resources
+PKGRESDIR=Package/Contents/Resources
 PKGRESFILES=\
 	License.rtf\
 	Welcome.rtf\
@@ -27,7 +26,7 @@ PKGDEP=\
 	NPInfo.plist\
 	$(PKGRESFILES)
 
-all: pkg dmg
+all: pkg
 
 $(PKG): $(PKGDEP)
 	mkdir -p $(KEDIR)/Contents
@@ -41,42 +40,28 @@ $(PKG): $(PKGDEP)
 	cp -pX FSInfo.plist $(FSDIR)/Contents/Info.plist
 	mkdir -p $(FSDIR)/Contents/Resources
 	cp -pX ../mount/mount_9p $(FSDIR)/Contents/Resources
+	mkdir -p $(PKGROOT)/usr/sbin
+	ln -s /System/Library/FileSystems/9p.fs/Contents/Resources/mount_9p $(PKGROOT)/usr/sbin/mount_9p
 	mkdir -p $(NPDIR)/Contents
 	cp -pX NPInfo.plist $(NPDIR)/Contents/Info.plist
 	mkdir -p $(NPDIR)/Contents/MacOS
 	cp -pX ../plugin/9p $(NPDIR)/Contents/MacOS/9p
 	mkdir -p $(MNDIR)
 	cp -pX mount_9p.8 $(MNDIR)
-	sudo chown -R root:wheel $(PKGROOT)
-	sudo chmod u+s $(KEDIR)/Contents/Resources/load_9p
-	$(PACKAGEMAKER) \
+	chmod u+s $(KEDIR)/Contents/Resources/load_9p
+	pkgbuild \
 		--root $(PKGROOT) \
-		--id com.lab-fgb.9p \
-		--domain system \
-		--no-recommend \
-		--root-volume-only \
-		--out $@
+		--identifier com.lab-fgb.9p \
+		--ownership recommended \
+		$@
+	mkdir -p $(PKGRESDIR)
 	cp -pX $(PKGRESFILES) $(PKGRESDIR)
-	sudo rm -fr $(PKGROOT)
-
-TDMG=tmp.dmg
-VOLUME=/Volumes/$(NAME)
-$(DMG): $(PKG) #volume.icns
-	hdiutil create -quiet -layout NONE -size 512k -fs HFS+ -volname $(NAME) $(TDMG)
-	hdiutil attach -quiet -private -nobrowse $(TDMG)
-	cp -pRX $(PKG) $(VOLUME)
-#	cp -pX volume.icns $(VOLUME)/.VolumeIcon.icns
-#	/Developer/usr/bin/SetFile -a -C $(VOLUME)
-	ln -s $(VOLUME)/$(PKGRESDIR)/License.rtf $(VOLUME)/License.rtf
-	cp -pX Uninstall.tool $(VOLUME)
-#	cp -pX DS_Store $(VOLUME)/.DS_Store
-	hdiutil detach -quiet $(VOLUME)
-	hdiutil convert -quiet -format UDBZ $(TDMG) -o /tmp/$@
-	mv -f /tmp/$@ $@
-	rm -f $(TDMG)
+	rm -fr $(PKGROOT)
 
 clean:
-	rm -fr *.dmg *.pkg
+	rm -fr *.pkg
 
-dmg: $(DMG)
 pkg: $(PKG)
+
+install: pkg
+	sudo installer -pkg $(PKG) -target /
